# guiElements

./: LICENSE.txt  README.md  setup.cfg  setup.py
guiElements/inputs/: __init__.py  button.py  colorPicker.py  fastMenu.py
guiElements/window/: __init__.py
gui_elements/inputs/: __init__.py  button.py  color_picker.py  drop_down_menu.py  label.py  text_input.py
gui_elements/inputs/docs/: button.md
src/: colors.py
src/guiElements/: __init__.py
src/guiElements.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/guiElements/inputs/: label.py
src/guiElements/window/: __init__.py  window.py
src/inputs/: button.py  colorPicker.py  fastMenu.py  textInput.py
src/window/: window.py  windowEvents.py
