[metadata]
name = guiElements
version = 0.0.6
author = ricardoquinteladev
author_email = 
description = Make pygame apps easier
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ricardo-quintela/guiElements
project_urls =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src